--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,20 @@
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-      "source.organizeImports.ruff": true,
-      "source.fixAll.ruff": true
+      "source.organizeImports.ruff": "explicit",
+      "source.fixAll.ruff": "explicit"
     }
   },
   "black-formatter.args": ["--line-length", "120"],
   "ruff.lint.enable": true,
   "ruff.organizeImports": true,
-  "editor.rulers": [120]
+  "editor.rulers": [
+    120
+  ],
+  "python.analysis.extraPaths": [
+    "./src"
+  ],
+  "cSpell.words": [
+    "ainvoke"
+  ]
 }
