--- a/config/scan_config.json
+++ b/config/scan_config.json
@@ -1,11 +1,23 @@
 [
   {
+    "source": "FRB-NEWS-PRESS-RELEASES",
+    "title": "Federal Reserve Bank News Press Releases",
+    "url": "https://www.federalreserve.gov/feeds/press_all.xml",
+    "parser_config": { "parser": "RSS-PARSER" },
+    "defaults": { "source": "FRB-NEWS-PRESS-RELEASES" }
+  },
+  {
+    "source": "FDIC-NEWS-PRESS-RELEASES",
+    "title": "FDIC News Press Releases",
+    "url": "https://public.govdelivery.com/topics/USFDIC_26/feed.rss",
+    "parser_config": { "parser": "RSS-PARSER" },
+    "defaults": { "source": "FDIC-NEWS-PRESS-RELEASES" }
+  },
+  {
     "source": "BIS-PRESS-RELEASES",
     "title": "BIS BCBS publications",
     "url": "https://www.bis.org/doclist/all_pressrels.rss",
     "parser_config": { "parser": "RSS-PARSER" },
-    "defaults": {
-      "source": "BIS-PRESS-RELEASES"
-    }
+    "defaults": { "source": "BIS-PRESS-RELEASES" }
   }
 ]
