--- a/config/scan_config.json
+++ b/config/scan_config.json
@@ -1,23 +1,18 @@
 [
   {
-    "source": "BIS-PRESS-RELEASES",
-    "title": "BIS BCBS publications",
-    "url": "https://www.bis.org/doclist/all_pressrels.rss",
-    "parser_config": { "parser": "RSS-PARSER" },
-    "defaults": { "source": "BIS-PRESS-RELEASES" }
-  },
-  {
-    "source": "FRB-NEWS-PRESS-RELEASES",
-    "title": "Federal Reserve Bank News Press Releases",
-    "url": "https://www.federalreserve.gov/feeds/press_all.xml",
-    "parser_config": { "parser": "RSS-PARSER" },
-    "defaults": { "source": "FRB-NEWS-PRESS-RELEASES" }
-  },
-  {
-    "source": "FDIC-NEWS-PRESS-RELEASES",
-    "title": "FDIC News Press Releases",
-    "url": "https://public.govdelivery.com/topics/USFDIC_26/feed.rss",
-    "parser_config": { "parser": "RSS-PARSER" },
-    "defaults": { "source": "FDIC-NEWS-PRESS-RELEASES" }
+    "source": "FDIC-NEWS-FIN-INST-LETTERS",
+    "url": "https://fdic.gov/news/financial-institution-letters/index.html",
+    "parser_config": {
+      "parser": "HTML-PARSER",
+      "rowSelector": ".views-element-container .views-row",
+      "headerRowIndex": -1,
+      "columns": [
+        { "name": "publishedOn", "selector": ".news-date" },
+        { "name": "title", "selector": ".news-title" },
+        { "name": "summary", "selector": ".news-content" },
+        { "name": "url", "selector": ".news-title" }
+      ]
+    },
+    "defaults": { "source": "FDIC-NEWS-FIN-INST-LETTERS" }
   }
 ]
