--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,11 @@
   "black-formatter.args": ["--line-length", "120"],
   "ruff.lint.enable": true,
   "ruff.organizeImports": true,
+  "ruff.fixAll": true,
+  "ruff.lineLength": 120,
+  "ruff.path": ["--line-length", "120"],
+  "ruff.lint.select": ["E", "F", "W", "I", "N", "B", "A", "COM", "C4", "PT", "SIM", "ARG", "ERA"],
+  "ruff.importStrategy": "fromEnvironment",
   "editor.rulers": [
     120
   ],
@@ -17,6 +22,7 @@
     "./src"
   ],
   "cSpell.words": [
-    "ainvoke"
+    "ainvoke",
+    "xpaths"
   ]
 }
